# healthcare-agent-agentcore

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
agentcore/: agentcore.json
app/HealthcareAgent/: main.py  pyproject.toml
app/HealthcareAgent/agents/: policy.py  provider.py  research.py
app/HealthcareAgent/shared/: __init__.py  bedrock_client.py  model.py
app/PolicyAgent/: main.py  pyproject.toml
app/ProviderAgent/: main.py  pyproject.toml
app/ProviderAgent/data/: doctors.json
app/ResearchAgent/: main.py  pyproject.toml
infrastructure/: iam-policy.json  trust-policy.json
scripts/: build-and-push.sh  cleanup.sh  create-iam-role.sh  create-runtimes.sh  deploy-code.sh  deploy.sh  invoke.sh  test-local.sh
